<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coffee_is_ready_for_you"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/coffeeCup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />


    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_1_cup_5bob_only"
        android:textColor="#010435"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/coffeeCup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText" />

    <ImageView
        android:id="@+id/coffeeCup"
        android:layout_width="194dp"
        android:layout_height="170dp"
        android:contentDescription="@string/coffee_cup"
        android:src="@drawable/coffeecup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249" />


    <TextView
        android:id="@+id/cups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="2dp"
        android:paddingEnd="7dp"
        android:background="#fff"
        android:maxLength="8"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#012ED3"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/coffeeCup"
        app:layout_constraintEnd_toEndOf="@+id/coffeeCup"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/coffeeCup"
        app:layout_constraintTop_toTopOf="@+id/coffeeCup"
        app:layout_constraintVertical_bias="0.209" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="86dp"
        android:layout_height="59dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/minus"
        android:background="@drawable/redcircle"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffeeCup" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="44dp"
        android:text="@string/plus"
        android:background="@drawable/greencircle"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffeeCup" />

    <TextView
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount"
        android:textSize="18sp"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toEndOf="@+id/btnMinus"
        app:layout_constraintTop_toBottomOf="@+id/coffeeCup"
        app:layout_constraintVertical_bias="0.383" />

    <TextView
        android:id="@+id/kshs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kshs"
        android:textSize="16sp"
        android:textColor="#000"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/btnMinus"
        app:layout_constraintTop_toBottomOf="@+id/coffeeCup"
        app:layout_constraintVertical_bias="0.464" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:maxLength="8"
        android:textSize="27sp"
        android:textColor="#012ED3"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toEndOf="@+id/btnMinus"
        app:layout_constraintTop_toBottomOf="@+id/coffeeCup"
        app:layout_constraintVertical_bias="0.546" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/reset"
        android:background="#E4B5A8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus" />


    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/buy"
        android:background="#E6430F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnReset"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />


</androidx.constraintlayout.widget.ConstraintLayout>